linting and adding some todos

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,11 @@
 {
     "cSpell.words": [
         "fitbit",
-        "Leaderboard"
+        "fullname",
+        "Intraday",
+        "KINDAHARD",
+        "Leaderboard",
+        "Millis",
+        "Vals"
     ]
 }
