setting up the builder

--- a/.eslintrc
+++ b/.eslintrc
@@ -9,5 +9,9 @@
       "eslint:recommended",
       "plugin:@typescript-eslint/eslint-recommended",
       "plugin:@typescript-eslint/recommended"
-    ]
+    ],
+    // "rules": {}
+    "rules": {
+      "semi": ["warn", "always"]
+    }
 }
