--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "---TODO---",
     "lint": "eslint ./src --ext .ts",
     "playground:node": "---TODO---",
-    "playground:web": "---TODO---"
+    "playground:web": "node -r esbuild-register esbuild.build.ts playground:browser"
   },
   "dependencies": {
     "@giveback007/util-lib": "0.23.0",
@@ -21,9 +21,16 @@
     "tslib": "~2.3.1"
   },
   "devDependencies": {
+    "@types/browser-sync": "^2.26.3",
+    "@types/fs-extra": "^9.0.13",
+    "@types/node": "^17.0.2",
     "@typescript-eslint/eslint-plugin": "^5.8.0",
     "@typescript-eslint/parser": "^5.8.0",
+    "browser-sync": "^2.27.7",
+    "esbuild": "^0.14.6",
+    "esbuild-register": "^3.2.1",
     "eslint": "^8.5.0",
+    "fs-extra": "^10.0.0",
     "typescript": "^4.5.4"
   }
 }
