--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,8 +7,10 @@
         "Intraday",
         "KINDAHARD",
         "Leaderboard",
+        "mets",
         "Millis",
         "outdir",
+        "Unestimated",
         "Vals"
     ],
     "files.exclude": {
