--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "publish-script": "---TODO---",
     "test": "---TODO---",
     "lint": "eslint ./src --ext .ts",
-    "playground:node": "---TODO---",
+    "playground:node": "node --trace-warnings -r esbuild-register esbuild.build.ts playground:nodejs",
     "playground:web": "node --trace-warnings -r esbuild-register esbuild.build.ts playground:browser"
   },
   "dependencies": {
