--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         /* -- Basic Options -- */
         "target": "es6", /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', or 'ESNEXT'. */
-        "rootDir": "./", /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
+        "rootDir": "./src", /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
         "outDir": "dist/", /* Redirect output structure to the directory. */
         "module": "commonjs", /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */
         "moduleResolution": "Node",
@@ -57,6 +57,8 @@
     },
     "exclude": [
         "node_modules",
-        "scripts"
-    ]
+        "scripts",
+        "playground"
+    ],
+    "include": ["src"],
 }
