chart data processing for sleep and docs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "mets",
         "Millis",
         "outdir",
+        "smas",
         "Unestimated",
         "Vals"
     ],
@@ -20,6 +21,6 @@
         "**/CVS": true,
         "**/.DS_Store": true,
         "**/Thumbs.db": true,
-        "**/node_modules": true
+        "**/node_modules": false
     }
 }
