--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "A fitbit web-api utility that is meant to be comprehensive and type-safe",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "files": ["/dist", "/src"],
+  "files": [
+    "/dist",
+    "/src"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/MyAlyce/fitbit-api"
@@ -19,6 +22,7 @@
   },
   "dependencies": {
     "@giveback007/util-lib": "0.23.0",
+    "dayjs": "^1.10.7",
     "rest-api-handler": "2.21.9",
     "tslib": "~2.3.1"
   },
@@ -28,9 +32,9 @@
     "@types/node": "^17.0.2",
     "@typescript-eslint/eslint-plugin": "^5.8.0",
     "@typescript-eslint/parser": "^5.8.0",
-    "esbuild-plugin-postcss2": "0.1.0",
     "browser-sync": "^2.27.7",
-    "esbuild": "^0.14.6",
+    "esbuild": "^0.14.8",
+    "esbuild-plugin-postcss2": "0.1.0",
     "esbuild-register": "^3.2.1",
     "eslint": "^8.5.0",
     "fs-extra": "^10.0.0",
